--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,9 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
+	"ownerNumber": "919688691933",
+	"ownerNumberr": "+919688691933",
+	"botnumber": "919688691933",
 	"cr": "Queen Alexa",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
@@ -11,9 +11,9 @@
 	"donate": "94767043432",
 	"ig": "https://instagram.com/HYPER_MOD",
 	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
+	"ownername": "© SATHAN-VIRUS"
 	"botname":"「 Queen Alexa 」",
-	"img":"https://k.top4top.io/p_2001zgi471.jpg",
+	"img":"https://k.top4top.io/p_2001zgi471.j919688691933pg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
 	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
